--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
-    "daisyui": "^5.1.10"
+    "daisyui": "^5.1.10",
+    "@supabase/supabase-js": "^2.45.0"
   }
 }
